--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply px-4 py-2 rounded-md  text-white;
+  }
+  .card {
+    @apply bg-white p-10 flex flex-col w-full shadow-xl rounded-xl space-y-4;
+    width: theme("width.1/3");
+    padding: auto;
+ 
+  }
+  .main {
+    @apply flex flex-col items-center justify-center h-screen w-full;
+  }
+.btn {
+    @apply bg-blue-500 hover:bg-blue-600 divide-x-2 divide-slate-400 justify-end;
+  }
+  .main .card-container {
+    @apply w-full justify-center flex-col  justify-items-center relative;
+  }
+  .card-content {
+    @apply flex flex-col items-center justify-center w-full;
+  }
+  .input {
+    @apply appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg w-full;
+  }
+  
+  .label {
+    @apply text-gray-600 font-bold mb-2 text-left  w-full;
+  }
+
+  .checkbox {
+    @apply  appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg checked:checked:bg-green-600 checked:checked:border-transparent;
+  }
+   .check-container {
+    @apply flex  justify-end w-full;
+  }
+
+  .error-page {
+    @apply min-h-screen bg-gray-100 flex flex-col justify-center py-12 sm:px-6 lg:px-8;
+  }
+}
+
+
