--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="isolate bg-white">
     <app-navbar></app-navbar>
-    <div>
+    <div class="min-h-screen">
         <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
