--- a/src/app/navigations/navbar/navbar.component.html
+++ b/src/app/navigations/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         </defs>
     </svg>
 </div> -->
-<div class="px-6 pt-6 lg:px-8 top-0 sticky z-50  even:sticky">
+<div class="px-6 pt-6 lg:px-8 top-0 sticky z-50  even:sticky ">
     <nav class="flex items-center justify-between" aria-label="Global">
         <div class="flex lg:flex-1">
             <a href="#" class="-m-1.5 p-1.5">
@@ -33,16 +33,25 @@
         <div class="hidden lg:flex lg:gap-x-12">
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Product</a>
 
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
+            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features </a>
 
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
 
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
         </div>
-        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+        <div class="hidden lg:flex lg:flex-1 lg:justify-end" *ngIf="loginStatus ==false">
             <a routerLink="/login" class="text-sm font-semibold leading-6 text-gray-900">Log in <span
                     aria-hidden="true">&rarr;</span></a>
         </div>
+        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+           
+            <button type="button" class="text-sm font-semibold leading-6 text-gray-900" (click)="logout()">
+                <span class="sr-only">Log out</span>
+                <span aria-hidden="true">&rarr;Log out
+                </span>
+            </button>
+        </div>
+       
     </nav>
     <!-- Mobile menu, show/hide based on menu open state. -->
     <div role="dialog" aria-modal="true">
